# repopilot

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml
docs/: 开发细节手把手指南.md  核心知识与面试指南.md  项目开发指南.md
docs/superpowers/plans/: 2026-07-09-repopilot-phase1.md
docs/superpowers/specs/: 2026-07-09-code-agent-design.md
eval/: REPORT.md  run.py  test_memory.py  test_memory_quick.py
eval/tasks/t01_fix_add_bug/: setup.py  task.md  verify.py
eval/tasks/t02_fix_string_utils/: setup.py  task.md  verify.py
eval/tasks/t03_new_feature_stack/: setup.py  task.md  verify.py
eval/tasks/t04_self_debug_typeerror/: setup.py  task.md  verify.py
eval/tasks/t05_multifile_refactor/: setup.py  task.md  verify.py
eval/tasks/t06_no_path_escape/: setup.py  task.md  verify.py
eval/tasks/t07_edge_cases_large_file/: setup.py  task.md  verify.py
eval/tasks/t08_add_cli_argparse/: setup.py  task.md  verify.py
eval/tasks/t09_import_error_recovery/: setup.py  task.md  verify.py
eval/tasks/t10_add_docstring_types/: setup.py  task.md  verify.py
eval/tasks/t11_regex_validation_bug/: setup.py  task.md  verify.py
eval/tasks/t12_decorator_pattern/: setup.py  task.md  verify.py
repopilot/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  repl.py
repopilot/agent/: __init__.py  compact.py  context.py  cost.py  diff_tracker.py  engine.py  finish_verify.py  loop.py  loop_guard.py  parser.py  state_machine.py  tool_display.py
repopilot/agent/prompts/: system.md
repopilot/code_index/: __init__.py  ignore.py  repo_map.py  symbol_index.py
repopilot/hooks/: __init__.py  builtin.py  manager.py
repopilot/llm/: __init__.py  circuit_breaker.py  service.py  stream_handler.py
repopilot/memory/: __init__.py
repopilot/permission/: __init__.py  approver.py  engine.py  patterns.py
repopilot/sandbox/: __init__.py  base.py  command_guard.py  docker_sandbox.py  local_sandbox.py
repopilot/session/: __init__.py  store.py
repopilot/tools/: __init__.py  base.py  errors.py  exec_tools.py  file_tools.py  meta_tools.py  registry.py  result.py  search_tools.py
scripts/: verify_release.py
tests/: test_circuit_breaker.py  test_cli.py  test_config.py  test_context.py  test_cost.py  test_docker_sandbox.py  test_exec_tools.py  test_file_tools.py  test_hooks.py  test_llm.py  test_local_sandbox.py  test_loop_mock.py  test_permission.py  test_repo_map.py  test_search_tools.py  test_security_fixes.py  test_session.py  test_tools.py  test_tools_edge.py
tests/fixtures/simple_project/: README.md  main.py  utils.py
tests/fixtures/todo_app/: README.md  cli.py  models.py  stats.py  store.py
tests/fixtures/todo_app/tests/: test_stats.py  test_todo.py
