[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repopilot"
version = "0.1.0"
description = "Local-first code agent with Docker sandbox and SWE-bench harness"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "prompt-toolkit>=3.0",
    "litellm>=1.40",
    "openai>=1.30",
    "docker>=7.0",
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-python>=0.21,<0.22",
    "pathspec>=0.12",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "diskcache>=5.6",
    "tomli>=2.0;python_version<\"3.11\"",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout",
    "pytest-cov",
    "ruff>=0.5",
    "ipython",
]

[project.scripts]
repopilot = "repopilot.cli:app"

[tool.setuptools.packages.find]
include = ["repopilot*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --timeout=30"
