[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repopilot-agent"
version = "0.1.5"
description = "Local-first AI code agent in your terminal. Inspired by Claude Code and Codex CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "code-agent", "cli", "coding-assistant", "llm", "developer-tools"]
authors = [
    {name = "ZhangYang2297"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "prompt-toolkit>=3.0",
    "litellm>=1.40,<1.92",
    "openai>=1.30",
    "docker>=7.0",
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-python>=0.21,<0.22",
    "pathspec>=0.12",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "diskcache>=5.6",
    "tomli>=2.0;python_version<\"3.11\"",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout",
    "pytest-cov",
    "ruff>=0.5",
    "ipython",
]

[project.scripts]
repopilot = "repopilot.cli:app"

[project.urls]
Homepage = "https://github.com/ZhangYang2297/repopilot"
Repository = "https://github.com/ZhangYang2297/repopilot"
Issues = "https://github.com/ZhangYang2297/repopilot/issues"

[tool.setuptools.packages.find]
include = ["repopilot*"]
exclude = ["tests*", "eval*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]






